--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@uniswap/sdk",
+  "name": "@soumyajit4419/sdk-v2",
   "license": "MIT",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "🛠 An SDK for building applications on top of Uniswap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Uniswap/uniswap-sdk.git",
+  "repository": "https://github.com/soumyajit4419/uniswap-v2-sdk-core",
   "keywords": [
     "uniswap",
     "ethereum"
